tests/invalid/syntax/generic_args_empty.fig
// INVALID: Generic arguments with no types inside
// Expected parse error: at least one type argument required
type Bad = Vec[]
